[package]
name = "ryogoku"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["env", "unicode", "cargo", "derive"] }
ryogoku-operator = { path = "../operator" }
serde_yaml = "0.9.16"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
