[package]
name = "dojo-operator"
version = "0.1.0"
edition = "2021"

[lib]
name = "dojo_operator"
path = "src/lib.rs"

[[bin]]
name = "dojo-operator"
path = "src/bin.rs"

[dependencies]
k8s-openapi = { version = "0.17.0", features = ["v1_25"] }
kube = { version = "0.78.0", features = ["runtime", "client", "derive"] }
schemars = "0.8.11"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.16"
