[package]
name = "ryogoku-operator"
version = "0.1.0"
edition = "2021"

[lib]
name = "ryogoku_operator"
path = "src/lib.rs"

[[bin]]
name = "ryogoku-operator"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.68"
env_logger = "0.10.0"
futures = "0.3.25"
k8s-openapi = { version = "0.17.0", features = ["v1_25"] }
kube = { version = "0.78.0", features = ["runtime", "client", "derive"] }
schemars = "0.8.11"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.16"
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
